# klik

./: .gitignore  CHARACTER_STATS.md  CLAUDE.md  Cargo.toml  README.md  STORAGE_OPTIMIZATION.md  TESTING.md  TODO.md
.github/: CI.md  README.md
.github/workflows/: ci.yml  release.yml
coverage/: COVERAGE_SUMMARY.md  NEW_COVERAGE_SUMMARY.md  tarpaulin-report.json
doc/: GUIDE.md  demo.tape
scripts/: coverage.sh  quick-coverage.sh
src/: app_dirs.rs  celebration.rs  config.rs  lib.rs  main.rs  runtime.rs  session.rs  stats.rs  thok.rs  time_series.rs  typing_policy.rs  ui.rs  util.rs  word_generator.rs
src/lang/: mod.rs
src/language/: core.rs  difficulty.rs  formatter.rs  formatting.rs  mod.rs  selection.rs  selector.rs  sentences.rs
src/ui/: character_stats.rs  charting.rs  screen.rs
tests/: headless_integration.rs  integration_min_session.rs  integration_thok_stats.rs  integration_training_sessions.rs
