[package]
name = "thokr"
description = "sleek typing tui with visualized results and historical logging"
version = "0.4.1"
readme = "README.md"
repository = "https://github.com/thatvegandev/thokr.git"
homepage = "https://github.com/thatvegandev/thokr"
license = "MIT"
authors = ["Colby Thomas <thatvegandev@gmail.com>"]
edition = "2021"
exclude = [".github", "*.log", "Dockerfile"]
keywords = ["tui", "terminal", "typing"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
itertools = "0.13"
unicode-width = "0.2"
webbrowser = "1.0"
crossterm = "0.28"
strum_macros = "0.26"
include_dir = "0.7"
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
cgisf_lib = "0.1.3"

[dev-dependencies]
tempfile = "3.10"
assert_matches = "1.5"