[package]
name = "klik"
description = "sleek typing tui with visualized results, intelligent practice, and comprehensive analytics"
version = "0.6.0"
readme = "README.md"
repository = "https://github.com/martintrojer/klik.git"
homepage = "https://github.com/martintrojer/klik"
license = "MIT"
authors = [
    "Martin Trojer <martin.trojer@gmail.com>",
    "Colby Thomas <thatvegandev@gmail.com>"
]
edition = "2021"
exclude = [".github", "*.log"]
keywords = ["tui", "terminal", "typing", "keyboard", "mechanical"]

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ['crossterm'] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
itertools = "0.13"
unicode-width = "0.2"
webbrowser = "1.0.4"
crossterm = "0.28"
strum_macros = "0.26"
include_dir = "0.7"
directories = "5.0"
chrono = { version = "0.4.20", features = ["serde"] }
cgisf_lib = "0.1.3"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.10"
assert_matches = "1.5"
